--- a/assets/css/film-list.scss
+++ b/assets/css/film-list.scss
@@ -1,5 +1,6 @@
 .cover {
     margin-bottom: 40px;
+    cursor: pointer;
 
     h4 {
         color: rgb(227, 227, 227);
@@ -21,3 +22,36 @@
         width: 80px;
     }
 }
+
+.film-about {
+    max-width: 60%;
+
+    h4 {
+        color: white;
+
+        .annee {
+            color: rgb(227, 227, 227);
+            font-size: 14px;
+        }
+    }
+
+    .caracteristique {
+        color: white;
+        font-size: 14px;
+    }
+    
+    .synopsis {
+        color: rgb(227, 227, 227);
+        font-size: 14px;
+    }
+
+    .cover-image {
+        padding: 0 7%;
+
+        img {
+            width: 100%;
+            height: 400px;
+        }
+    }
+}
+
