--- a/assets/css/template.scss
+++ b/assets/css/template.scss
@@ -1,4 +1,3 @@
-
 // FOR THE BODY
 body {
   background-color: #000000;
@@ -89,6 +88,14 @@ body {
     border-color: #552583;
   }
 
+  .text-warning {
+    color: #fdb927 !important;
+  }
+
+  .text-secondary {
+    color: #552583 !important; 
+  }
+
 }
 
 // GENERAL CLASSES
@@ -99,15 +106,15 @@ body {
 }
 
 .w-40 {
-  width: 40%!important;
+  width: 40% !important;
 }
 
 .w-60 {
-  width: 60%!important;
+  width: 60% !important;
 }
 
 .w-70 {
-  width: 60%!important;
+  width: 60% !important;
 }
 
 .pagination {
@@ -127,3 +134,13 @@ body {
     }
   }
 }
+
+.modal-dialog {
+  .modal-content {
+    background-color: #101010;
+
+    .modal-header {
+      border-bottom: solid 1px rgba(227, 227, 227, 0.207);
+    }
+  }
+}  
