--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -116,4 +116,43 @@ body {
 }
 .modal-dialog .modal-content .modal-header {
   border-bottom: solid 1px rgba(227, 227, 227, 0.207);
+}
+
+form .form-control, form .form-select {
+  background-color: #000000;
+  color: rgb(227, 227, 227);
+}
+form .form-control:focus, form .form-select:focus {
+  background-color: #000000;
+  border-color: #fdb927;
+  color: rgb(227, 227, 227);
+  box-shadow: 0 0 0 0.25rem rgba(253, 185, 39, 0.1019607843);
+}
+form .form-label {
+  color: white;
+}
+form .form-check-input {
+  background-color: #000000;
+  border: white solid 1px;
+}
+form .form-check-input:checked {
+  background-color: #fdb927;
+  border: white;
+}
+form .form-check-label {
+  color: rgb(227, 227, 227);
+}
+form .chosen-choices {
+  background-color: #000000 !important;
+  background-image: none !important;
+  padding: 0.375rem 0.75rem !important;
+  border-radius: 0.25rem;
+}
+form .chosen-container-active:focus {
+  border: 1px #fdb927;
+}
+form .search-choice {
+  background-color: #fdb927 !important;
+  border: 0px !important;
+  background-image: none !important;
 }/*# sourceMappingURL=template.css.map */
