--- a/assets/css/template.scss
+++ b/assets/css/template.scss
@@ -144,3 +144,53 @@ body {
     }
   }
 }  
+
+form {
+  .form-control, .form-select {
+    background-color: #000000;
+    color: rgb(227, 227, 227);
+  }
+
+  .form-control:focus, .form-select:focus {
+    background-color: #000000;
+    border-color: #fdb927;
+    color: rgb(227, 227, 227);
+    box-shadow: 0 0 0 0.25rem #fdb9271a;
+  }
+
+  .form-label {
+    color: white;
+  }
+
+  .form-check-input {
+    background-color: #000000;
+    border: white solid 1px;
+  }
+
+  .form-check-input:checked {
+    background-color: #fdb927;
+    border: white;
+  }
+
+  .form-check-label {
+    color: rgb(227, 227, 227);
+  }
+
+  .chosen-choices {
+    background-color: #000000 !important;
+    background-image: none !important;
+    padding: 0.375rem 0.75rem !important;
+    border-radius: 0.25rem;
+  }
+
+  .chosen-container-active:focus {
+    border: 1px #fdb927;
+  }
+
+  .search-choice {
+    background-color: #fdb927 !important; 
+    border: 0px !important;
+    background-image: none !important;
+  }
+
+}
